--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <main class="container">
       <div class="calculator">
         <h1>Calc</h1>
+        <div class="display">
+          <input type="text" class="user-input" readonly placeholder="0" />
+        </div>
+        <div class="keypad">
+          <div class="row">
+            <div class="key">7</div>
+            <div class="key">8</div>
+            <div class="key">9</div>
+            <div class="delete-key">DEL</div>
+          </div>
+          <div class="row">
+            <div class="key">4</div>
+            <div class="key">5</div>
+            <div class="key">6</div>
+            <div class="key">+</div>
+          </div>
+          <div class="row">
+            <div class="key">1</div>
+            <div class="key">2</div>
+            <div class="key">3</div>
+            <div class="key">-</div>
+          </div>
+          <div class="row">
+            <div class="key">.</div>
+            <div class="key">0</div>
+            <div class="key">/</div>
+            <div class="key">x</div>
+          </div>
+          <div class="row">
+            <div class="reset-key">RESET</div>
+            <div class="answer-key">=</div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
